overflow on mobile fix

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -116,6 +116,7 @@ body {
 
 .App {
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 p {
